[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[project]
name = "basedflare-session-niquests"
version = "0.2.1"
dependencies = [
    "niquests>=2.32.0",
    "argon2-cffi>=23.1.0",
]
requires-python = ">=3.8"
authors = [
    { name = "loynet", email = "loynet@protonmail.com" },
    { name = "abel1502" },
]
description = "Provides a niquests-flavored session to solve BasedFlare challenges automatically. It also includes utility functions to solve the challenges manually."
readme = "README.md"
license = "AGPL-3.0"
license-files = ["LICENSE"]
keywords = ["basedflare", "session", "niquests"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/abel1502/basedflare-session-niquests"
Issues = "https://github.com/abel1502/basedflare-session-niquests/issues"
Repository = "https://github.com/abel1502/basedflare-session-niquests.git"
