[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[project]
name = "basedflare-session-redux"
version = "0.3.0"
dependencies = [
    "anyquests",
    "argon2-cffi>=23.1.0",
    "requests>=2.32.4",  # Fallback in case neither requests nor niquests is installed
]
requires-python = ">=3.8"
authors = [
    { name = "loynet", email = "loynet@protonmail.com" },
    { name = "abel1502" },
]
description = "Provides a requests- or niquests-flavored session to solve BasedFlare challenges automatically. Also includes utility functions to solve the challenges manually."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["basedflare", "session", "requests", "niquests"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/abel1502/basedflare-session-redux"
Issues = "https://github.com/abel1502/basedflare-session-redux/issues"
Repository = "https://github.com/abel1502/basedflare-session-redux.git"
